# src/beeApi/controllers/myController/managerController.go
@@ -3,10 +3,10 @@ package myController
 import (
 	"context"
 	"encoding/json"
-	"github.com/apache/thrift/lib/go/thrift"
 	"github.com/astaxie/beego"
 	"log"
 	"managerStudent/myThrift/gen-go/apiservice"
+	"managerStudent/src/beeApi/models"
 )
 
 // Operations about Users
@@ -26,65 +26,101 @@ var defaultCtx = context.Background()
 }
 */
 
-
 // @Title CreateStudent
 // @Description create users
-// @Param	body		body 	apiservice.SinhVien	true		"body for sinhvien content"
-// @Success 200 {int} apiservice.SinhVien.Ma
+// @Param	body		body 	models.SinhVien	true		"body for sinhvien content"
+// @Success 200 {string} models.SinhVien[Ma]
 // @Failure 403 body is empty
-// @router / [post]
+// @router /student/create [post]
 func (u *ManagerController) CreateStudent() {
 	var sv apiservice.SinhVien
-	json.Unmarshal(u.Ctx.Input.RequestBody, &sv)
-	// ----------------------------
-	var transport thrift.TTransport
-	var err error
-	transport, err = thrift.NewTSocket("127.0.0.1:7777")
+	err := json.Unmarshal(u.Ctx.Input.RequestBody, &sv)
 	if err != nil {
-		log.Fatal("Error opening socket:", err)
+		log.Fatal("Error Convert To Json")
 	}
-	transportFactory := thrift.NewTTransportFactory()
-	transport, err = transportFactory.GetTransport(transport)
-	protocolFactory := thrift.NewTCompactProtocolFactory()
+	uid, err := models.GetClient().PutSinhVien(defaultCtx, &sv)
 	if err != nil {
-		log.Fatal(err)
+		log.Println(err)
 	}
-	iprot := protocolFactory.GetProtocol(transport)
-	oprot := protocolFactory.GetProtocol(transport)
-	client := apiservice.NewManagerStudentClient(thrift.NewTStandardClient(iprot, oprot))
-	// ----------------------------
-	uid, _ := client.PutSinhVien(defaultCtx, &sv)
+	u.Data["json"] = map[string]int32{"State": uid}
+	u.ServeJSON()
+}
+
+// @Title CreateClass
+// @Description create Class
+// @Param	body		body 	models.LopHocPhan	true		"body for Class content"
+// @Success 200 {string} models.LopHocPhan[Ma]
+// @Failure 403 body is empty
+// @router /class/create [post]
+func (u *ManagerController) CreateClass() {
+	var lhp apiservice.LopHocPhan
+	err := json.Unmarshal(u.Ctx.Input.RequestBody, &lhp)
+	if err != nil {
+		log.Fatal("Error Convert To Json")
+	}
+	uid, err := models.GetClient().PutLopHP(defaultCtx, &lhp)
+	if err != nil {
+		log.Println(err)
+	}
+	u.Data["json"] = map[string]int32{"State": uid}
+	u.ServeJSON()
+}
+
+// @Title AddStudentToClass
+// @Description Add a student to class
+// @Param	sv		body  models.SinhVien	true		"body for Class content"
+// @Param	ma_lop		path 	string	true		"The key for staticblock"
+// @Success 200 {string} result
+// @Failure 403 body is empty
+// @router /class/add-student/:ma_lop [put]
+func (u *ManagerController) AddStudentToClass() {
+	var sv apiservice.SinhVien
+	err := json.Unmarshal(u.Ctx.Input.RequestBody, &sv)
+	if err != nil {
+		log.Fatal("Error Convert To Json")
+	}
+	idC := u.GetString(":ma_lop")
+	log.Println("ma lop ", idC)
+	uid, err := models.GetClient().AddSinhVienVaoLop(defaultCtx, &sv, idC)
+	if err != nil {
+		log.Println(err)
+	}
+	u.Data["json"] = map[string]int32{"State": uid}
+	u.ServeJSON()
+}
+
+// @Title AddStudentsToClass
+// @Description Add students to class
+// @Param	sv		body  models.SinhVienSlices	true		"body for Class content"
+// @Param	maLop		path 	string	true		"The key for staticblock"
+// @Success 200 {string} result
+// @Failure 403 body is empty
+// @router /class/add-students/ [put]
+func (u *ManagerController) AddStudentsToClass() {
+	var sv apiservice.SinhVienSlices
+	err := json.Unmarshal(u.Ctx.Input.RequestBody, &sv)
+	if err != nil {
+		log.Fatal("Error Convert To Json")
+	}
+	idC := u.GetString(":sv")
+	uid, err := models.GetClient().AddSinhVienSlicesVaoLop(defaultCtx, sv, idC)
+	if err != nil {
+		log.Println(err)
+	}
 	u.Data["json"] = map[string]int32{"State": uid}
 	u.ServeJSON()
 }
 
 // @Title GetStudent
 // @Description get user by uid
-// @Param	uid		path 	string	true		"The key for staticblock"
-// @Success 200 {object} apiservice.SinhVien
-// @Failure 403 :uid is empty
-// @router /:uid [get]
-func (u *ManagerController) Get() {
-	uid := u.GetString(":uid")
+// @Param	ma		path 	string	true		"The key for staticblock"
+// @Success 200 {object} models.SinhVien
+// @Failure 403 :ma is empty
+// @router /student/get/:ma [get]
+func (u *ManagerController) GetStudent() {
+	uid := u.GetString(":ma")
 	if uid != "" {
-		// ----------------------------
-		var transport thrift.TTransport
-		var err error
-		transport, err = thrift.NewTSocket("127.0.0.1:7777")
-		if err != nil {
-			log.Fatal("Error opening socket:", err)
-		}
-		transportFactory := thrift.NewTTransportFactory()
-		transport, err = transportFactory.GetTransport(transport)
-		protocolFactory := thrift.NewTCompactProtocolFactory()
-		if err != nil {
-			log.Fatal(err)
-		}
-		iprot := protocolFactory.GetProtocol(transport)
-		oprot := protocolFactory.GetProtocol(transport)
-		client := apiservice.NewManagerStudentClient(thrift.NewTStandardClient(iprot, oprot))
-		// ----------------------------
-		user, err := client.GetSinhVien(defaultCtx, uid)
+		user, err := models.GetClient().GetSinhVien(defaultCtx, uid)
 		if err != nil {
 			u.Data["json"] = err.Error()
 		} else {
@@ -94,3 +130,78 @@ func (u *ManagerController) Get() {
 	u.ServeJSON()
 }
 
+// @Title GetClass
+// @Description get user by uid
+// @Param	ma		path 	string	true		"The key for staticblock"
+// @Success 200 {object} models.LopHocPhan
+// @Failure 403 :uid is empty
+// @router /class/get/:ma [get]
+func (u *ManagerController) GetClass() {
+	uid := u.GetString(":ma")
+	if uid != "" {
+		user, err := models.GetClient().GetLopHocPhan(defaultCtx, uid)
+		if err != nil {
+			u.Data["json"] = err.Error()
+		} else {
+			u.Data["json"] = user
+		}
+	}
+	u.ServeJSON()
+}
+
+// @Title GetStudentInClass
+// @Description get Student by uid class
+// @Param	ma		path 	string	true		"The key for staticblock"
+// @Success 200 {object} models.SinhVienSlices
+// @Failure 403 :uid is empty
+// @router /class/get-student/:ma [get]
+func (u *ManagerController) GetStudentInClass() {
+	uid := u.GetString(":ma")
+	if uid != "" {
+		user, err := models.GetClient().GetSinhVienLHP(defaultCtx, uid)
+		if err != nil {
+			u.Data["json"] = err.Error()
+		} else {
+			u.Data["json"] = user
+		}
+	}
+	u.ServeJSON()
+}
+
+// @Title DeleteStudent
+// @Description create users
+// @Param	ma		path 	string	true		"The key for staticblock"
+// @Success 200 {int} models.SinhVien[Ma]
+// @Failure 403 body is empty
+// @router /student/delete/:ma [delete]
+func (u *ManagerController) DeleteStudent() {
+	uid := u.GetString(":ma")
+	if uid != "" {
+		user, err := models.GetClient().DelSinhVien(defaultCtx, uid)
+		if err != nil {
+			u.Data["json"] = err.Error()
+		} else {
+			u.Data["json"] = user
+		}
+	}
+	u.ServeJSON()
+}
+
+// @Title DeleteClass
+// @Description create users
+// @Param	ma		path 	string	true		"The key for staticblock"
+// @Success 200 {string} models.LopHocPhan[Ma]
+// @Failure 403 body is empty
+// @router /class/delete/:ma [delete]
+func (u *ManagerController) DeleteClass() {
+	uid := u.GetString(":ma")
+	if uid != "" {
+		user, err := models.GetClient().DelLopHP(defaultCtx, uid)
+		if err != nil {
+			u.Data["json"] = err.Error()
+		} else {
+			u.Data["json"] = user
+		}
+	}
+	u.ServeJSON()
+}
