# src/beeApi/models/LopHocPhan.go
@@ -1,1 +1,8 @@
 package models
+
+type LopHocPhan struct {
+	Ma         string
+	Ten        string
+	GiaoVien   string
+	DsSinhVien SinhVienSlices
+}
