# src/beeApi/models/SinhVien.go
@@ -1,1 +1,11 @@
 package models
+
+type SinhVien struct {
+	Ma       string
+	HoTen    string
+	GioiTinh int32
+	NgaySinh string
+	Sdt      string
+}
+
+type SinhVienSlices []*SinhVien
