# src/beeApi/routers/commentsRouter_controllers.go
@@ -7,112 +7,67 @@ import (
 
 func init() {
 
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Post",
-            Router: "/",
-            AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
+		beego.ControllerComments{
+			Method:           "Post",
+			Router:           "/",
+			AllowHTTPMethods: []string{"post"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
 
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: "/",
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
+		beego.ControllerComments{
+			Method:           "GetAll",
+			Router:           "/",
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
 
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: "/:objectId",
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
+		beego.ControllerComments{
+			Method:           "Get",
+			Router:           "/:uid",
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
 
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: "/:objectId",
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
+		beego.ControllerComments{
+			Method:           "Put",
+			Router:           "/:uid",
+			AllowHTTPMethods: []string{"put"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
 
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:ObjectController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: "/:objectId",
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
+		beego.ControllerComments{
+			Method:           "Delete",
+			Router:           "/:uid",
+			AllowHTTPMethods: []string{"delete"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
 
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Post",
-            Router: "/",
-            AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
+		beego.ControllerComments{
+			Method:           "Login",
+			Router:           "/login",
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
 
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: "/",
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: "/:uid",
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: "/:uid",
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: "/:uid",
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Login",
-            Router: "/login",
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Logout",
-            Router: "/logout",
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
+	beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"] = append(beego.GlobalControllerRouter["managerStudent/src/beeApi/controllers:UserController"],
+		beego.ControllerComments{
+			Method:           "Logout",
+			Router:           "/logout",
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
 
 }
