# src/beeApi/routers/router.go
@@ -8,18 +8,13 @@
 package routers
 
 import (
+	"github.com/astaxie/beego"
 	"managerStudent/src/beeApi/controllers"
 	"managerStudent/src/beeApi/controllers/myController"
-	"github.com/astaxie/beego"
 )
 
 func init() {
 	ns := beego.NewNamespace("/v1",
-		beego.NSNamespace("/object",
-			beego.NSInclude(
-				&controllers.ObjectController{},
-			),
-		),
 		beego.NSNamespace("/user",
 			beego.NSInclude(
 				&controllers.UserController{},
